
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;


 int DEL ;
 int * END ;
 char* strchr (char*,int ) ;
 int strncmp (char*,char*,int) ;

int check_drop(u_char *cmd) {
    int i;
    u_char *p,
            *drop[] = {
                "login",
                "Boot",
                "loginfailed",
                ((void*)0)
            };

    p = strchr(cmd, DEL);
    if(!p) {
        p = strchr(cmd, END[0]);
        if(!p) return(0);
    }

    for(i = 0; drop[i]; i++) {
        if(!strncmp(cmd, drop[i], p - cmd)) return(1);
    }

    return(0);
}
